--- a/configs/nerf/nerf.yaml
+++ b/configs/nerf/nerf.yaml
@@ -1,5 +1,5 @@
 task: nerf
-gpus: [0]
+gpus: [1]
 exp_name: 'nerf'
 scene: 'lego'
 
@@ -21,6 +21,7 @@ network:
     nerf:
         W: 256 # width
         D: 8 # depth
+        skips: [4] # layer where concatenate input
         V_D: 1 # appearance depth
     xyz_encoder:
         type: 'frequency' # positional encoding
@@ -34,14 +35,14 @@ network:
 train_dataset:
     data_root: 'data/nerf_synthetic'
     split: 'train'
-    input_ratio: 1. # input image ratio, you can set it to 0.5 to acclerate training
+    input_ratio: 0.5 # input image ratio, you can set it to 0.5 to acclerate training
     cams: [0, -1, 1] # input cameras, you can use this variable to select training images
 
 test_dataset:
     data_root: 'data/nerf_synthetic'
     split: 'test'
     input_ratio: 0.5
-    cams: [0, -1, 100]
+    cams: [5, -1, 25]
 
 train:
     batch_size: 1
@@ -59,6 +60,6 @@ test:
 
 ep_iter: 500
 save_ep: 20
-eval_ep: 20       # 10000 iterations
+eval_ep: 2000       # 10000 iterations
 save_latest_ep: 5 # 2500 iterations
-log_interval: 10
+log_interval: 100
